--- a/client/front/pc_web_app/src/assets/css/global.css
+++ b/client/front/pc_web_app/src/assets/css/global.css
@@ -5,6 +5,165 @@
 @Site: panda.sbfbi.xyz
 */
 /* 辅助 */
+/* 循环生成，padding margin 通用类*/
+.panda-m-0 {
+  margin: 0 !important;
+}
+
+.panda-m-1 {
+  margin: 10px !important;
+}
+
+.panda-m-2 {
+  margin: 20px !important;
+}
+
+.panda-m-3 {
+  margin: 30px !important;
+}
+
+.panda-m-4 {
+  margin: 40px !important;
+}
+
+.panda-m-5 {
+  margin: 50px !important;
+}
+
+.panda-m-6 {
+  margin: 60px !important;
+}
+
+.panda-mx-0 {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.panda-mx-1 {
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+}
+
+.panda-mx-2 {
+  margin-left: 20px !important;
+  margin-right: 20px !important;
+}
+
+.panda-mx-3 {
+  margin-left: 30px !important;
+  margin-right: 30px !important;
+}
+
+.panda-mx-4 {
+  margin-left: 40px !important;
+  margin-right: 40px !important;
+}
+
+.panda-mx-5 {
+  margin-left: 50px !important;
+  margin-right: 50px !important;
+}
+
+.panda-mx-6 {
+  margin-left: 60px !important;
+  margin-right: 60px !important;
+}
+
+.panda-p-0 {
+  padding: 0 !important;
+}
+
+.panda-p-1 {
+  padding: 10px !important;
+}
+
+.panda-p-2 {
+  padding: 20px !important;
+}
+
+.panda-p-3 {
+  padding: 30px !important;
+}
+
+.panda-p-4 {
+  padding: 40px !important;
+}
+
+.panda-p-5 {
+  padding: 50px !important;
+}
+
+.panda-p-6 {
+  padding: 60px !important;
+}
+
+.panda-px-0 {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.panda-px-1 {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+
+.panda-px-2 {
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+}
+
+.panda-px-3 {
+  padding-left: 30px !important;
+  padding-right: 30px !important;
+}
+
+.panda-px-4 {
+  padding-left: 40px !important;
+  padding-right: 40px !important;
+}
+
+.panda-px-5 {
+  padding-left: 50px !important;
+  padding-right: 50px !important;
+}
+
+.panda-px-6 {
+  padding-left: 60px !important;
+  padding-right: 60px !important;
+}
+
+.panda-mb-0 {
+  margin-bottom: 0 !important;
+}
+
+.panda-mb-1 {
+  margin-bottom: 10px !important;
+}
+
+.panda-mb-2 {
+  margin-bottom: 20px !important;
+}
+
+.panda-mb-3 {
+  margin-bottom: 30px !important;
+}
+
+.panda-mb-4 {
+  margin-bottom: 40px !important;
+}
+
+.panda-mb-5 {
+  margin-bottom: 50px !important;
+}
+
+.panda-mb-6 {
+  margin-bottom: 60px !important;
+}
+
+.panda-bg-white {
+  background-color: #fff;
+}
+
 .layui-tab-title .layui-this a {
   color: #46AB88;
 }
@@ -32,6 +191,14 @@
   border-radius: 2px;
   -webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.panda-left {
+  float: left;
+}
+
+.panda-right {
+  float: right;
 }
 
 .soci span {
@@ -533,5 +700,70 @@
   height: 45px;
   margin: 0;
   border-radius: 2px;
+}
+
+.panda-nav-avatar img {
+  width: 36px;
+  height: 36px;
+  margin-left: 10px;
+  border-radius: 100%;
+}
+
+.panda-nav-avatar .icon-renzheng {
+  font-size: 16px;
+  top: 1px;
+}
+
+.panda-nav-avatar .panda-badge-vip {
+  position: relative;
+  margin-left: 10px;
+}
+
+/* 设置 */
+.avatar-add {
+  position: relative;
+  width: 373px;
+  height: 373px;
+  background-color: #f2f2f5;
+}
+
+.avatar-add .upload-img {
+  position: absolute;
+  left: 50%;
+  top: 35px;
+  margin: 0 0 0 -56px;
+}
+
+.avatar-add img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 168px;
+  height: 168px;
+  margin: -50px 0 0 -84px;
+  border-radius: 100%;
+}
+
+.avatar-add .loading {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding: 0;
+  background-color: #000;
+  opacity: 0.5;
+  filter: Alpha(opacity=50);
+}
+
+.avatar-add p {
+  position: absolute;
+  top: 70px;
+  width: 100%;
+  margin-top: 10px;
+  font-size: 12px;
+  text-align: center;
+  color: #999;
 }
 /*# sourceMappingURL=global.css.map */
