--- a/client/front/pc_web_app/src/assets/css/hinc/hinc.css
+++ b/client/front/pc_web_app/src/assets/css/hinc/hinc.css
@@ -960,15 +960,44 @@ hr {
     }
 }
 
-/* flex 布局 */
+/* flex 布局 (媒体框) */
 .media {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+    height: 50px;
+    padding-right: 2px;
+    /*border: 1px solid #f2f2f2;*/
+    /*border-radius: 2px;*/
+    margin-bottom: 10px;
+    position: relative;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
 }
 
+/*.media:after {*/
+/*    content: " ";*/
+/*    display: block;*/
+/*    height: 1px;*/
+/*    width: 100%;*/
+/*    background-color: #d2d2d2;*/
+/*    position: absolute;*/
+/*    top: 55px;*/
+/*}*/
+
+.media-avatar {
+    margin-right: 5px;
+    width: 45px;
+    height: 45px;
+    border-radius: 2px;
+}
+
+.media-avatar img {
+    display: block;
+    width: 100%;
+}
 
 .media-body {
     -webkit-box-flex: 1;
@@ -987,10 +1016,30 @@ hr {
 .media-heading {
     margin-top: 0;
     margin-bottom: 5px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+
+.media-heading h2 {
+    flex: 1;
+    margin-left: 5px;
 }
 
 .media-content {
     font-size: 13px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.media-user * {
+    display: inline-block;
+}
+
+.media-info * {
+    display: inline-block;
 }
 
 /* 圆形图片框 */
