--- a/client/front/pc_web_app/src/assets/css/hinc/hinc.css
+++ b/client/front/pc_web_app/src/assets/css/hinc/hinc.css
@@ -974,18 +974,18 @@ hr {
     /*border-radius: 2px;*/
     margin-bottom: 10px;
     position: relative;
-    box-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+    /*box-shadow: 1px 1px 2px rgba(0,0,0,0.05);*/
 }
 
-/*.media:after {*/
-/*    content: " ";*/
-/*    display: block;*/
-/*    height: 1px;*/
-/*    width: 100%;*/
-/*    background-color: #d2d2d2;*/
-/*    position: absolute;*/
-/*    top: 55px;*/
-/*}*/
+.media:after {
+    content: " ";
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: #d2d2d2;
+    position: absolute;
+    bottom: -5px;
+}
 
 .media-avatar {
     margin-right: 5px;
